kubernetes/production/vsf-capitools-namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vsf-capitools
  clusterName: ITJonction
