kubernetes/production/elasticsearch-nginx-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: vue-storefront
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - eck.capitools.co.uk
      secretName: eck-tls
  rules:
    - host: eck.capitools.co.uk
      http:
        paths:
          - backend:
              serviceName: vue-storefront
              servicePort: 3000
