kubernetes/production/nginx-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: vue-storefront
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    ingress.kubernetes.io/configuration-snippet: |2
      gzip on;
      gzip_proxied any;
      gzip_types
        text/css
        text/javascript
        text/xml
        application/javascript
        application/json
        text/json
        text/html;
spec:
  tls:
  - hosts:
    - prod.capitools.co.uk
    secretName: echo-tls
  rules:
    - host: prod.capitools.co.uk
      http:
        paths:
          - path: /assets
            backend:
              serviceName: vue-storefront
              servicePort: 3000
          - path: /api
            backend:
              serviceName: vue-storefront-api
              servicePort: 8080
          - path: /img
            backend:
              serviceName: vue-storefront-api
              servicePort: 8080
          - path: /
            backend:
              serviceName: vue-storefront
              servicePort: 3000
